2011-07-19  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Rename agentIdentifierPrefix to processId, move out from page agent and make static.
        https://bugs.webkit.org/show_bug.cgi?id=64729

        Reviewed by Pavel Feldman.

        * public/WebDevToolsAgent.h:
        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::setAgentIdentifierPrefix):
        (WebKit::WebDevToolsAgentImpl::setProcessId):
        * src/WebDevToolsAgentImpl.h:

2011-07-18  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2011-07-18  James Robinson  <jamesr@chromium.org>

        Timer scheduling should be based off the monotonic clock
        https://bugs.webkit.org/show_bug.cgi?id=64544

        Reviewed by Darin Adler.

        Renames setSharedTimerFireTime to setSharedTimerFireInterval to be consistent with WebCore.

        * public/WebKitClient.h:
        (WebKit::WebKitClient::setSharedTimerFireInterval):
        * src/PlatformBridge.cpp:
        (WebCore::PlatformBridge::setSharedTimerFireInterval):

2011-07-18  Yuzhu Shen  <yzshen@chromium.com>

        Reviewed by James Robinson.

        [chromium] WebFontImpl::drawText needs to handle the canvasIsOpaque input.
        https://bugs.webkit.org/show_bug.cgi?id=64555
        
        This change handles canvasIsOpaque for the WEBKIT_USING_SKIA case.
 
        * src/WebFontImpl.cpp: handled canvasIsOpaque.
        * src/WebFontImpl.h: added method declaration.

2011-07-16  Simon Fraser  <simon.fraser@apple.com>

        Add code to attempt to align compositing layers to pixel boundaries when page scale changes
        https://bugs.webkit.org/show_bug.cgi?id=64658

        Reviewed by Dan Bernstein.

        Removed implementations of backingScaleFactor() and pageScaleFactor() now
        that GraphicsLayerClient has default implementations.

        * src/PageOverlay.cpp:

2011-07-15  Simon Fraser  <simon.fraser@apple.com>
